--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <div class="container">
       <div class="wrapper">
         <div class="row w-100">
-          <div class="col-xs-12 col-md-6 col-lg-6 nopadding mb-md-5">
+          <div class="col-xs-12 col-md-6 col-lg-6 nopadding">
             <div class="left_con">
               <p>Welcome to <img src="./img/remark_logo_main 2.svg" /></p>
 
@@ -39,7 +39,7 @@
               <h5 class="foot" id="w1">&copy;2021 Remark Social</h5>
             </div>
           </div>
-          <div class="col-xs-12 col-md-6 col-lg-6 nopadding mb-md-5">
+          <div class="col-xs-12 col-md-6 col-lg-6 nopadding">
             <div class="right_con">
               <div style="display: block">
                 <img
