--- a/files/second.html
+++ b/files/second.html
@@ -125,6 +125,8 @@
                   style="width: 300px; height: 300px"
                   alt="logo"
                 />
+                <p class="follow">Follow our story</p>
+
                 <div class="icons">
                   <i class="fa fa-facebook-f"></i>
                   <i class="fa fa-play"></i>
