--- a/files/second.html
+++ b/files/second.html
@@ -107,9 +107,9 @@
                   placeholder="Your message"
                 ></textarea>
                 <div class="but">
-                  <button class="btn bot w-100">
-                    <a href="./third.html"> Submit</a>
-                  </button>
+                  <a href="./third.html"
+                    ><button class="btn bot w-100">Submit</button>
+                  </a>
                 </div>
               </div>
               <h5 class="foot" id="w1" style="margin-top: 30px">
