--- a/files/second.html
+++ b/files/second.html
@@ -16,105 +16,113 @@
     <title>Document</title>
   </head>
   <body>
-    <div class="container">
+    <div class="container-fluid">
       <div class="wrapper">
         <div class="row w-100">
           <div class="col-xs-12 col-md-6 col-lg-6 nopadding">
             <div class="left_con">
-              <div class="info">
-                <p>Tell us about your business</p>
-                <img
-                  src="../img/remark_m_mark_iceblue 1.svg"
-                  style="width: 30px; height: 30px"
-                />
-              </div>
+              <div class="col-md-10 mx-auto">
+                <div class="info">
+                  <p>Tell us about your business</p>
+                  <img
+                    src="../img/remark_m_mark_iceblue 1.svg"
+                    style="width: 30px; height: 30px"
+                  />
+                </div>
 
-              <div class="info_text">
-                <input type="text" placeholder="Name" style="width: 100%" />
-                <input
-                  class="phon"
-                  type="text"
-                  placeholder="Phone number"
-                  style="width: 37%; margin-right: 4%"
-                />
-                <input type="email" placeholder="Email" style="width: 58%" />
-                <select class="form-control form-control-sm">
-                  <option
-                    style="color: rgba(140, 164, 175, 0.5)"
-                    value=""
-                    disabled
-                    selected
-                    hidden
+                <div class="info_text">
+                  <input type="text" placeholder="Name" style="width: 100%" />
+                  <input
+                    class="phon"
+                    type="text"
+                    placeholder="Phone number"
+                    style="width: 37%; margin-right: 4%"
+                  />
+                  <input type="email" placeholder="Email" style="width: 58%" />
+                  <select class="form-control form-control-sm">
+                    <option
+                      style="color: rgba(140, 164, 175, 0.5)"
+                      value=""
+                      disabled
+                      selected
+                      hidden
+                    >
+                      How can we help you?
+                    </option>
+                    <option>Small select</option>
+                  </select>
+                  <select class="form-control form-control-sm">
+                    <option
+                      style="color: rgba(140, 164, 175, 0.5)"
+                      value=""
+                      disabled
+                      selected
+                      hidden
+                    >
+                      What's your monthly budget?
+                    </option>
+                    <option>Small select</option>
+                  </select>
+                  <div
+                    style="
+                      display: flex;
+                      align-items: flex-start;
+                      justify-content: space-between;
+                      margin: 10px auto;
+                    "
+                    class="do"
                   >
-                    How can we help you?
-                  </option>
-                  <option>Small select</option>
-                </select>
-                <select class="form-control form-control-sm">
-                  <option
-                    style="color: rgba(140, 164, 175, 0.5)"
-                    value=""
-                    disabled
-                    selected
-                    hidden
-                  >
-                    What's your monthly budget?
-                  </option>
-                  <option>Small select</option>
-                </select>
-                <div
-                  style="
-                    display: flex;
-                    align-items: flex-start;
-                    justify-content: space-between;
-                    margin: 10px auto;
-                  "
-                  class="do"
-                >
-                  <h3>Do you have a website?</h3>
-                  <div style="width: 50%" class="check-box">
-                    <div class="check">
-                      <label class="form-check-label mr-2" for="exampleRadios1">
-                        Yes
-                      </label>
-                      <input
-                        type="radio"
-                        name="exampleRadios"
-                        id="exampleRadios1"
-                        value="option1"
-                        checked
-                      />
-                    </div>
-                    <div class="check">
-                      <label class="form-check-label mr-2" for="exampleRadios1">
-                        No
-                      </label>
-                      <input
-                        type="radio"
-                        name="exampleRadios"
-                        id="exampleRadios1"
-                        value="option1"
-                        checked
-                      />
+                    <h3>Do you have a website?</h3>
+                    <div style="width: 50%" class="check-box">
+                      <div class="check">
+                        <label
+                          class="form-check-label mr-2"
+                          for="exampleRadios1"
+                        >
+                          Yes
+                        </label>
+                        <input
+                          type="radio"
+                          name="exampleRadios"
+                          id="exampleRadios1"
+                          value="option1"
+                          checked
+                        />
+                      </div>
+                      <div class="check">
+                        <label
+                          class="form-check-label mr-2"
+                          for="exampleRadios1"
+                        >
+                          No
+                        </label>
+                        <input
+                          type="radio"
+                          name="exampleRadios"
+                          id="exampleRadios1"
+                          value="option1"
+                          checked
+                        />
+                      </div>
                     </div>
                   </div>
+                  <textarea
+                    name=""
+                    id=""
+                    cols="30"
+                    rows="10"
+                    placeholder="Your message"
+                  ></textarea>
+                  <div class="but">
+                    <a href="./third.html"
+                      ><button class="btn bot w-100">Submit</button>
+                    </a>
+                  </div>
                 </div>
-                <textarea
-                  name=""
-                  id=""
-                  cols="30"
-                  rows="10"
-                  placeholder="Your message"
-                ></textarea>
-                <div class="but">
-                  <a href="./third.html"
-                    ><button class="btn bot w-100">Submit</button>
-                  </a>
-                </div>
+                <h5 class="foot" id="w1" style="margin-top: 30px">
+                  &copy;2021 Remark Social
+                </h5>
               </div>
-              <h5 class="foot" id="w1" style="margin-top: 30px">
-                &copy;2021 Remark Social
-              </h5>
             </div>
           </div>
           <div class="col-xs-12 col-md-6 col-lg-6 nopadding">
