--- a/files/third.html
+++ b/files/third.html
@@ -16,18 +16,22 @@
     <title>Document</title>
   </head>
   <body>
-    <div class="container">
+    <div class="container-fluid">
       <div class="wrapper">
         <div class="row w-100">
           <div class="col-xs-12 col-md-6 col-lg-6 nopadding">
             <div class="left_con2">
-              <div class="message">
-                <img
-                  src="../img/remark_m_mark_iceblue 1.svg"
-                  style="width: 30px; height: 30px"
-                />
-                <h1>Yes! We got you!!</h1>
-                <p>Now you’re a step closer to growing your business online.</p>
+              <div class="col-md-7 mx-auto">
+                <div class="message">
+                  <img
+                    src="../img/remark_m_mark_iceblue 1.svg"
+                    style="width: 30px; height: 30px"
+                  />
+                  <h1>Yes! We got you!!</h1>
+                  <p>
+                    Now you’re a step closer to growing your business online.
+                  </p>
+                </div>
               </div>
             </div>
           </div>
