--- a/index.html
+++ b/index.html
@@ -16,27 +16,37 @@
     <title>Document</title>
   </head>
   <body>
-    <div class="container">
+    <div class="container-fluid">
       <div class="wrapper">
         <div class="row w-100">
-          <div class="col-xs-12 col-md-6 col-lg-6 nopadding">
+          <div class="col-xs-12 col-md-5 col-lg-6 nopadding">
             <div class="left_con">
-              <p>Welcome to <img src="./img/remark_logo_main 2.svg" /></p>
+              <div class="app">
+                <p>
+                  Welcome to
+                  <img
+                    style="display: block; margin-top: 15px"
+                    src="./img/remark_logo_main 2.svg"
+                  />
+                </p>
 
-              <div class="info_text">
-                <img src="./img/remark_m_mark_iceblue 1.svg" />
-                <h1>
-                  We are a <span class="gray">Social</span>
-                  <span class="blue">Media Marketing</span>
-                  <span class="gray"> Agency</span> based in Lagos, Nigeria.
-                </h1>
-                <div class="but">
-                  <button class="btn bot w-100">
-                    <a href="./files/second.html"> We can help! GET IN TOUCH</a>
-                  </button>
+                <div class="info_text">
+                  <img src="./img/remark_m_mark_iceblue 1.svg" />
+                  <h1>
+                    We are a <span class="gray">Social</span>
+                    <span class="blue">Media Marketing</span>
+                    <span class="gray"> Agency</span> based in Lagos, Nigeria.
+                  </h1>
+                  <div class="but">
+                    <button class="btn bot w-100">
+                      <a href="./files/second.html">
+                        We can help! GET IN TOUCH</a
+                      >
+                    </button>
+                  </div>
                 </div>
+                <h5 class="foot" id="w1">&copy;2021 Remark Social</h5>
               </div>
-              <h5 class="foot" id="w1">&copy;2021 Remark Social</h5>
             </div>
           </div>
           <div class="col-xs-12 col-md-6 col-lg-6 nopadding">
