--- a/files/second.html
+++ b/files/second.html
@@ -21,7 +21,7 @@
         <div class="row w-100">
           <div class="col-xs-12 col-md-6 col-lg-6 nopadding">
             <div class="left_con">
-              <div class="col-md-10 mx-auto">
+              <div class="adj mx-auto">
                 <div class="info">
                   <p>Tell us about your business</p>
                   <img
