--- a/index.html
+++ b/index.html
@@ -24,10 +24,7 @@
               <div class="app">
                 <p>
                   Welcome to
-                  <img
-                    style="display: block; margin-top: 15px"
-                    src="./img/remark_logo_main 2.svg"
-                  />
+                  <img src="./img/remark_logo_main 2.svg" />
                 </p>
 
                 <div class="info_text">
@@ -38,11 +35,11 @@
                     <span class="gray"> Agency</span> based in Lagos, Nigeria.
                   </h1>
                   <div class="but">
-                    <button class="btn bot w-100">
-                      <a href="./files/second.html">
-                        We can help! GET IN TOUCH</a
-                      >
-                    </button>
+                    <a href="./files/second.html">
+                      <button class="btn bot w-100">
+                        We can help! GET IN TOUCH
+                      </button>
+                    </a>
                   </div>
                 </div>
                 <h5 class="foot" id="w1">&copy;2021 Remark Social</h5>
