--- a/files/third.html
+++ b/files/third.html
@@ -21,7 +21,7 @@
         <div class="row w-100">
           <div class="col-xs-12 col-md-6 col-lg-6 nopadding">
             <div class="left_con2">
-              <div class="col-md-7 mx-auto">
+              <div class="adj mx-auto">
                 <div class="message">
                   <img
                     src="../img/remark_m_mark_iceblue 1.svg"
