--- a/files/second.html
+++ b/files/second.html
@@ -22,6 +22,9 @@
           <div class="col-xs-12 col-md-6 col-lg-6 nopadding">
             <div class="left_con">
               <div class="adj mx-auto">
+                <div class="cac">
+                  <img src="../img/Group 34.svg" alt="" />
+                </div>
                 <div class="info">
                   <p>Tell us about your business</p>
                   <img
@@ -49,7 +52,13 @@
                     >
                       How can we help you?
                     </option>
-                    <option>Small select</option>
+                    <option>Social media management</option>
+                    <option>Social media audit</option>
+                    <option>Social content</option>
+                    <option>Social media strategy</option>
+                    <option>Search engine optimization</option>
+                    <option>Social media ads</option>
+                    <option>Social media page revamp</option>
                   </select>
                   <select class="form-control form-control-sm">
                     <option
@@ -86,7 +95,6 @@
                           name="exampleRadios"
                           id="exampleRadios1"
                           value="option1"
-                          checked
                         />
                       </div>
                       <div class="check">
@@ -101,7 +109,6 @@
                           name="exampleRadios"
                           id="exampleRadios1"
                           value="option1"
-                          checked
                         />
                       </div>
                     </div>
@@ -128,11 +135,7 @@
           <div class="col-xs-12 col-md-6 col-lg-6 nopadding">
             <div class="right_con">
               <div style="display: block">
-                <img
-                  src="../img/Ellipse 3.svg"
-                  style="width: 300px; height: 300px"
-                  alt="logo"
-                />
+                <img src="../img/Ellipse 3.svg" alt="logo" />
                 <p class="follow">Follow our story</p>
 
                 <div class="icons">
