--- a/files/third.html
+++ b/files/third.html
@@ -38,11 +38,7 @@
           <div class="col-xs-12 col-md-6 col-lg-6 nopadding">
             <div class="right_con">
               <div style="display: block">
-                <img
-                  src="../img/Ellipse 3.svg"
-                  style="width: 300px; height: 300px"
-                  alt="logo"
-                />
+                <img src="../img/Ellipse 3.svg" alt="logo" />
                 <p class="follow">Follow our story</p>
                 <div class="icons">
                   <i class="fa fa-facebook-f"></i>
