--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
                   <img src="./img/remark_logo_main 2.svg" />
                 </p>
 
-                <div class="info_text">
+                <div class="info_text" id="t2">
                   <img src="./img/remark_m_mark_iceblue 1.svg" />
                   <h1>
-                    We are a <span class="gray">Social</span>
-                    <span class="blue">Media Marketing</span>
+                    We are a <span class="gray">Social Media</span>
+                    <span class="blue"> Marketing</span>
                     <span class="gray"> Agency</span> based in Lagos, Nigeria.
                   </h1>
                   <div class="but">
@@ -49,11 +49,7 @@
           <div class="col-xs-12 col-md-6 col-lg-6 nopadding">
             <div class="right_con">
               <div style="display: block">
-                <img
-                  src="./img/Ellipse 3.svg"
-                  style="width: 300px; height: 300px"
-                  alt="logo"
-                />
+                <img src="./img/Ellipse 3.svg" alt="logo" />
                 <p class="follow">Follow our story</p>
 
                 <div class="icons">
